--- a/spedition/SpeditionClient/app/src/main/res/layout/activity_report_edit.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/activity_report_edit.xml
@@ -43,12 +43,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/leaveTime"
-            app:layout_constraintBottom_toBottomOf="@+id/dateButton"
+            app:layout_constraintBottom_toBottomOf="@+id/leaveText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/dateButton" />
+            app:layout_constraintTop_toTopOf="@+id/leaveText" />
 
         <Button
-            android:id="@+id/dateButton"
+            android:id="@+id/leaveText"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginStart="8dp"
@@ -68,7 +68,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
-            app:layout_constraintStart_toEndOf="@id/dateButton"
+            app:layout_constraintStart_toEndOf="@id/leaveText"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -154,10 +154,14 @@
     <Spinner
         android:id="@+id/productSpinner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:spinnerMode="dialog"
+        android:background="#9A9A9A"
+        android:dropDownWidth="match_parent"
+        android:popupBackground="#9A9A9A"
+        android:soundEffectsEnabled="true"
+        android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/routeButton" />
@@ -250,7 +254,6 @@
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Button"
         android:textSize="10sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
