--- a/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/field_edit_dialog.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/counterparty" />
 
     <Button
-        android:id="@+id/dateButton"
+        android:id="@+id/leaveText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25.05.20"
@@ -57,9 +57,9 @@
         android:layout_marginEnd="8dp"
         android:text="08:30"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/dateButton"
+        app:layout_constraintBottom_toBottomOf="@+id/leaveText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dateButton" />
+        app:layout_constraintTop_toTopOf="@+id/leaveText" />
 
     <TextView
         android:id="@+id/textView3"
@@ -70,7 +70,7 @@
         android:text="@string/product"
         android:textColor="@color/textColor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateButton" />
+        app:layout_constraintTop_toBottomOf="@+id/leaveText" />
 
     <Spinner
         android:id="@+id/details"
