--- a/spedition/SpeditionClient/app/src/main/res/values/colors.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#373737</color>
+    <color name="spinnerBackground">#323232</color>
 </resources>
