--- a/spedition/SpeditionClient/app/src/main/res/values/styles.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:spinnerStyle">@style/Spinner</item>
+    </style>
+    <style name="Spinner" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:textViewStyle">@color/textColor</item>
+        <item name="android:popupBackground">@android:color/white</item>
     </style>
 
 </resources>
